--- a/src/index.tmpl
+++ b/src/index.tmpl
@@ -28,6 +28,111 @@
       ul { list-style-type: none; margin: 0; padding: 0; }
       ul > li { padding: 0.5rem 1rem; }
       ul > li:nth-child(odd) { background: #efefef; }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+:root{
+--kw-light:#ffffff;
+--kw-red:#F55353;
+--kw-yellow:#F6F54D;
+--kw-orange:#FEB139;
+--kw-emre:#ff4500;
+--kw-blue:#1e3a8a;
+--kw-exe:#7b68ee;
+--kw-rope:#89cff0;
+--kw-purple:#965F8A;
+--kw-sogloys:#9400d3;
+--kw-green:#6BCB77;
+--kw-lime:#76ff7a;
+--kw-teal:#008080;
+--kw-cyan:#00ced1;
+--kw-dark:#111827;
+--kw-black:#050505;
+--kw-sky:#0c4a6e;
+--kw-black-900:#050505;
+--kw-black-800:#0d0d0d;
+--kw-black-700:#121212;
+--kw-black-600:#1a1a1a;
+--kw-black-500:#1f1f1f;
+--kw-black-400:#262626;
+--kw-black-300:#2b2b2b;
+--kw-black-200:#333333;
+--kw-black-100:#383838;
+--kw-sky-900:#0c4a6e;
+--kw-sky-800:#075985;
+--kw-sky-700:#0369a1;
+--kw-sky-600:#0284c7;
+--kw-sky-500:#0ea5e9;
+--kw-sky-400:#38bdf8;
+--kw-sky-300:#7dd3fc;
+--kw-sky-200:#e0f2fe;
+--kw-sky-100:#f0f9ff;
+--kw-sky-900:#1e3a8a;
+--kw-sky-800:#1e40af;
+--kw-sky-700:#1d4ed8;
+--kw-sky-600:#2563eb;
+--kw-sky-500:#3b82f6;
+--kw-sky-400:#60a5fa;
+--kw-sky-300:#93c5fd;
+--kw-sky-200:#bfdbfe;
+--kw-sky-100:#dbeafe;
+}
+/**Classic**/
+*{box-sizing:border-box}
+body{
+margin:0;
+padding:0;
+font-family: 'Roboto', sans-serif;
+}
+/**Grid start**/
+/**Containers**/
+.container-fluid{width:100%}
+.container{
+width:min(100% - 16vw);
+margin-inline:auto;
+}
+/**Flex direction**/
+/**Row**/
+.row{
+display:flex;
+flex-wrap:wrap;
+flex-direction:row;
+}
+.row-reverse{
+display:flex;
+flex-wrap:wrap;
+flex-direction:row-reverse;
+}
+/**Column**/
+.column{
+display:flex;
+flex-wrap:wrap;
+flex-direction:column
+}
+.column-reverse{
+display:flex;
+flex-wrap:wrap;
+flex-direction:column-reverse
+}
+.gap-5{gap:5px}
+.gap-10{gap:10px}
+/**Positions**/
+.d-flex{display:flex;}
+/**Justify content**/
+.justify-content-start{justify-content:start}
+.justify-content-center{justify-content:center}
+.justify-content-beetween{justify-content:space-between}
+.justify-content-around{justify-content:space-around}
+.justify-content-evenly{justify-content:space-evenly}
+/**Align items**/
+.align-items-stretch{align-items:stretch}
+.align-items-center{align-items:center}
+.align-items-start{align-items:flex-start}
+.align-items-end{align-items:flex-end}
+/**Text-align**/
+.center-text{text-align:center}
+.start-text{text-align:left}
+.end-text{text-align:right}
+/**Positions end**/
+/**Columns**/
 </style>
 
 
